k8s/postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: framework-demo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: postgres
    spec:
      volumes:
        - name: pv-pgdata
          persistentVolumeClaim:
            claimName: pvc-pgdata
      containers:
        - name: postgres
          image: postgres:alpine
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pv-pgdata
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "psql -U postgres -c 'create database keycloak'"]
---
apiVersion: v1
kind: Service
metadata:
  labels:
    kubernetes.io/name: postgres
  name: postgresql
  namespace: framework-demo
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres-port
  selector:
    k8s-app: postgres
