k8s/auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "auth-deployment"
  namespace: framework-demo
spec:
  selector:
    matchLabels:
      app: "auth"
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: "auth"
    spec:
      containers:
        - name: "auth"
          image: "auth:v1"
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
            - name: debug
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: "auth-service"
  namespace: framework-demo
spec:
  selector:
    app: "auth"
  ports:
    - name: http
      targetPort: 8080
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: auth-ingress
  namespace: framework-demo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.nyomio.local`) && (PathPrefix(`/oauth/`) || PathPrefix(`/logout`) || PathPrefix(`/api/v1/auth/`))
      kind: Rule
      priority: 2
      services:
        - name: auth-service
          port: 8080
  tls:
    secretName: certsecret
