k8s/keycloak-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sso.nyomio.local`)
      kind: Rule
      priority: 1
      services:
        - name: nyom-sso-keycloak-http
          port: 80
  tls:
    secretName: certsecret
